@@ -3,6 +3,9 @@ Imager release history.  Older releases can be found in Changes.old
 Imager 0.63 - unreleased
 ===========
 
+ - the font libraries are now only initialized when needed.
+   http://rt.cpan.org/Ticket/Display.html?id=28825
+
 Bug fixes:
 
  - Imager::Matrix2d->translate() now only requires one of the x or y
